[tool.poetry]
name = "ds17"
version = "1"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytz = "^2024.1"
tzlocal = "^5.2"
requests = "^2.32.3"
wikipedia = "^1.4.0"
timezonefinder = "^6.5.0"
streamlit = "^1.35.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
